Working version
---------------

### Language features:

### Runtime system:
- #10831: Multicore OCaml
  (The multicore team, caml-devel and more)

* #10863, #10933: Remove support for old, unprefixed C runtime function names
  such as `alloc`.  The new names prefixed with `caml_` must be used instead,
  such as `caml_alloc`.  Consequently, it is no longer needed to define
  `CAML_NAME_SPACE` to avoid bringing unprefixed names into scope: this is now
  the default behavior.
  (Nicolás Ojeda Bär, review by Xavier Leroy)

- #10902: Do not register empty code fragments in natdynlink.
  (David Allsopp, review by Xavier Leroy and Damien Doligez)

- #10965: `caml_fatal_error_hook`, GC timing hooks, and
  `caml_scan_roots_hook` are now atomic variables. Restore GC timing
  hooks.
  (Guillaume Munch-Maccagnoni, review by Enguerrand Decorne, Xavier
  Leroy, Gabriel Scherer, and KC Sivaramakrishnan)

- #10875: Add option to allocate stacks with mmap(MAP_STACK) instead of malloc.
  This is exposed via a configure --enable-mmap-map-stack option, and is
  enabled by default on OpenBSD where it is mandatory.
  (Anil Madhavapeddy, review by Gabriel Scherer, Tom Kelly,
   Michael Hendricks and KC Sivaramakrishnan).

- #10950: Do not use mmap to allocate Caml_state.
  In order to reduce virtual memory usage, we dynamically allocate
  the domain_state structure.
  (Enguerrand Decorne, KC Sivaramakrishnan and Tom Kelly,
  review by Anil Madhavapeddy and Gabriel Scherer)

### Code generation and optimizations:

### Standard library:

- #10742: Use LXM as the pseudo-random number generator for module Random.
  Add `Random.State.split` and `Random.split` to "split" a PRNG off
  another PRNG.
  (Xavier Leroy, review by Gabriel Scherer and Hugo Heuzard)

* #10867: Remove deprecated values: Array.create, Array.make_float,
  Array.create_matrix, Bytes.uppercase, Bytes.lowercase, Bytes.capitalize,
  Bytes.uncapitalize, Char.lowercase, Char.uppercase, Filename.temp_dir_name,